kubernetes/part_19/external-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nas  # example value
---
kind: Service
apiVersion: v1
metadata:
  name: nas-service-v4 # example value
  namespace: nas
spec:
  ipFamilies:
  - IPv4
  ports:
    - name: nas-5000   # example value
      protocol: TCP 
      port: 5000       # example value
    - name: nas-5001   # example value
      protocol: TCP
      port: 5001       
spec:
  type: ExternalName
  externalName: xxx.xxx.xxx.xxx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-ingress
  namespace: nas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: nas.mydomain.com # example value
    http:
      paths:
      - path: /
        pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
        backend:
          service:
            name: nas-service-v4
            port:
              number: 5001  # example value
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    -  nas.mydomain.com t
    secretName: n nas.mydomain.com -tls # < cert-manager will store the created certificate in this secret.
